# short-drama

./: .gitignore  AGENTS.md  Qwen-MultiAngle.json  README.md  restart_and_deploy.py  test_new_instance.py  test_qwen_deployment.py
backend/: .env.docker.example  .env.example  ARCHITECTURE.md  DOCKER_COMPOSE_README.md  ECS_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_STATUS.md  QUICK_START.md  deploy-to-ecs.sh  design.md  docker-compose.yml  ecs-task-definition.json  setup-ecs-service.sh
backend/canvas_service/: .dockerignore  .env.example  Dockerfile  README.md  requirements.txt  server.py
backend/generator/: .env  .env.example  ARCHITECTURE.md  AWS_DEPLOYMENT.md  AWS_IAM_SETUP.md  CLI_QUICK_START.md  CLI_README.md  DEPLOYMENT_SUMMARY.md  MODEL_CONFIGURATION.md  MODEL_LOADING_STRATEGY.md  QUICK_SETUP.md  README.md  README_DEPLOYMENT.md  WATERMARK_REMOVAL_README.md  cli.py  config.py  fix-redis-security-group.sh  install-cli-only.sh  install-local.sh  install.sh  pyproject.toml  server.py  worker_generate.py
backend/generator/generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/generator/models/: __init__.py  base.py  flux.py  qwen_multi_angle.py  watermark_removal.py
backend/generator/services/: __init__.py  flux_service.py  model_loader.py  model_manager.py  optimization.py  queue_manager.py  qwen_service.py  redis_service.py  s3_service.py  task_service.py  vram_manager.py  watermark_service.py
playground/: .env  README.md  cosyvoice_tts.py  example_cosyvoice.py  input_text.txt  requirements.txt  test_api.py
(+113 files in other folders)
